--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
 title: Cunxuan Jiang's Homepage
 page-top-title: Cunxuan Jiang
-top-section-bg-text: Be what you wanna be
-home-subtitle: Yourname&ensp;|&ensp;上杉绘梨衣
-copyright-text: '&copy; Yourname 2023-2025. All Rights Reserved.'
+top-section-bg-text: Welcome! Amigo!
+home-subtitle: Cunxuan Jiang&ensp;|&ensp; Jacob
+copyright-text: '&copy; Cunxuan Jiang 2023-2025. All Rights Reserved.'
